--- a/InformacoesDoSistemaSwing/src/informacoesdosistemajava/InformacoesDoSistemaJava.form
+++ b/InformacoesDoSistemaSwing/src/informacoesdosistemajava/InformacoesDoSistemaJava.form
@@ -3,6 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Informa&#xe7;&#xf5;es do Sistema"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -56,7 +57,7 @@
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace pref="215" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -94,7 +95,7 @@
                   <Component id="lblMensagemResolucao" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="lblSoResolution" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="146" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -153,8 +154,11 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblSoName">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jLabel2"/>
+        <Property name="text" type="java.lang.String" value="lblSoName"/>
       </Properties>
+      <Events>
+        <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="lblSoNamePropertyChange"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lblMensagemArq">
       <Properties>
@@ -163,7 +167,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblSoArch">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jLabel4"/>
+        <Property name="text" type="java.lang.String" value="lblSoArch"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lblMensagemIdioma">
@@ -173,7 +177,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblSoLanguage">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jLabel6"/>
+        <Property name="text" type="java.lang.String" value="lblSoLanguage"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lblMensagemResolucao">
@@ -183,7 +187,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblSoResolution">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jLabel8"/>
+        <Property name="text" type="java.lang.String" value="lblSoResolution"/>
       </Properties>
     </Component>
   </SubComponents>
